[gd_scene load_steps=16 format=3 uid="uid://uu8tuimpfk1l"]

[ext_resource type="Script" path="res://scripts/dialogue_manager.gd" id="1_d84xq"]
[ext_resource type="Texture2D" uid="uid://ctgcpfke5mlsy" path="res://assets/bg_shop.png" id="2_b6jav"]
[ext_resource type="Texture2D" uid="uid://bs21y0irp1a0q" path="res://assets/widgets/text_left.tres" id="2_bqex3"]
[ext_resource type="Script" path="res://scripts/background.gd" id="3_hmo5t"]
[ext_resource type="Texture2D" uid="uid://dtymipgbotro5" path="res://assets/widgets/text_right.tres" id="4_7sur1"]
[ext_resource type="Theme" uid="uid://crcwqj3itilwv" path="res://components/theme.tres" id="4_8drwc"]
[ext_resource type="FontFile" uid="uid://cgw4qlayyi1n8" path="res://assets/fonts/Labrada-Bold.ttf" id="5_vgeml"]
[ext_resource type="FontFile" uid="uid://cuopr482cfpmh" path="res://assets/fonts/Labrada-Italic.ttf" id="6_i3vh1"]
[ext_resource type="FontFile" uid="uid://dvm6wb5asonrb" path="res://assets/fonts/Labrada-BoldItalic.ttf" id="7_fmatw"]
[ext_resource type="PackedScene" uid="uid://cswc46wfrrae2" path="res://components/character.tscn" id="10_ifasc"]
[ext_resource type="PackedScene" uid="uid://dfj1jge1ejgxq" path="res://components/button2.tscn" id="11_fo8sk"]

[sub_resource type="Curve2D" id="Curve2D_8jda6"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 90, 227, 0, 0, 0, 0, -125.605, 227.033, 0, 0, 0, 0, -145, 229)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_bwr4g"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 255, 227, 0, 0, 0, 0, -142, 229)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_jju44"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 477, 232, 0, 0, 0, 0, 998, 230)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_co3um"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 640, 227, 0, 0, 0, 0, 992, 236)
}
point_count = 2

[node name="DialogueManager" type="Node2D"]
script = ExtResource("1_d84xq")

[node name="Background" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 0
texture = ExtResource("2_b6jav")
script = ExtResource("3_hmo5t")

[node name="FarLeftPath" type="Path2D" parent="."]
position = Vector2(7, 138)
curve = SubResource("Curve2D_8jda6")

[node name="FarLeftFollower" type="PathFollow2D" parent="FarLeftPath"]
position = Vector2(90, 227)
rotation = -3.14159
rotates = false
loop = false

[node name="CharacterFarLeft" parent="FarLeftPath/FarLeftFollower" instance=ExtResource("10_ifasc")]
position = Vector2(90, 229)
rotation = 3.14159

[node name="LeftPath" type="Path2D" parent="."]
position = Vector2(24, 138)
curve = SubResource("Curve2D_bwr4g")

[node name="LeftFollower" type="PathFollow2D" parent="LeftPath"]
position = Vector2(255, 227)
rotation = -3.14159
rotates = false
loop = false

[node name="CharacterLeft" parent="LeftPath/LeftFollower" instance=ExtResource("10_ifasc")]
position = Vector2(85, 229)
rotation = 3.14159

[node name="RightPath" type="Path2D" parent="."]
position = Vector2(24, 138)
curve = SubResource("Curve2D_jju44")

[node name="RightFollower" type="PathFollow2D" parent="RightPath"]
position = Vector2(477, 232)
rotation = -3.14159
rotates = false
loop = false

[node name="CharacterRight" parent="RightPath/RightFollower" instance=ExtResource("10_ifasc")]
position = Vector2(98, 234)
rotation = 3.14159

[node name="FarRightPath" type="Path2D" parent="."]
position = Vector2(42, 138)
curve = SubResource("Curve2D_co3um")

[node name="FarRightFollower" type="PathFollow2D" parent="FarRightPath"]
position = Vector2(640, 227)
rotation = -3.14159
rotates = false
loop = false

[node name="CharacterFarRight" parent="FarRightPath/FarRightFollower" instance=ExtResource("10_ifasc")]
position = Vector2(88, 229)
rotation = 3.14159

[node name="TextLeftBox" type="TextureRect" parent="."]
offset_left = 48.0
offset_top = 399.0
offset_right = 736.0
offset_bottom = 599.0
mouse_filter = 2
texture = ExtResource("2_bqex3")

[node name="TextLeftName" type="RichTextLabel" parent="TextLeftBox"]
layout_mode = 0
offset_left = 11.0
offset_top = 11.0
offset_right = 224.0
offset_bottom = 60.0
mouse_filter = 2
theme = ExtResource("4_8drwc")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/bold_font = ExtResource("5_vgeml")
bbcode_enabled = true
text = "[center][b]Name[/b][/center]"

[node name="TextRightBox" type="TextureRect" parent="."]
offset_left = 68.0
offset_top = 395.0
offset_right = 764.0
offset_bottom = 603.0
mouse_filter = 2
texture = ExtResource("4_7sur1")

[node name="TextRightName" type="RichTextLabel" parent="TextRightBox"]
layout_mode = 0
offset_left = 466.0
offset_top = 15.0
offset_right = 679.0
offset_bottom = 64.0
mouse_filter = 2
theme = ExtResource("4_8drwc")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/bold_font = ExtResource("5_vgeml")
bbcode_enabled = true
text = "[center][b]Name[/b][/center]"

[node name="Text" type="RichTextLabel" parent="."]
offset_left = 99.0
offset_top = 454.0
offset_right = 715.0
offset_bottom = 586.0
mouse_filter = 2
theme = ExtResource("4_8drwc")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/bold_font = ExtResource("5_vgeml")
theme_override_fonts/italics_font = ExtResource("6_i3vh1")
theme_override_fonts/bold_italics_font = ExtResource("7_fmatw")
bbcode_enabled = true
text = "And here is a [b]bunch[/b] of text that we need to use to [b][i]simulate[/i][/b] some kind of text and hopefully it [i]can fit[/i] about three lines of bold and italics text in."
scroll_active = false

[node name="Option1" parent="." instance=ExtResource("11_fo8sk")]
offset_left = 274.0
offset_top = 35.0
offset_right = 522.0
offset_bottom = 115.0
signal_target = "event_choice"
text = "Option1"

[node name="Option2" parent="." instance=ExtResource("11_fo8sk")]
offset_left = 274.0
offset_top = 138.0
offset_right = 522.0
offset_bottom = 218.0
signal_target = "event_choice"
text = "Option2"

[node name="Option3" parent="." instance=ExtResource("11_fo8sk")]
offset_left = 274.0
offset_top = 246.0
offset_right = 522.0
offset_bottom = 326.0
signal_target = "event_choice"
text = "Option3"

[node name="Fin" type="RichTextLabel" parent="."]
offset_left = 351.0
offset_top = 6.0
offset_right = 804.0
offset_bottom = 79.0
mouse_filter = 2
theme = ExtResource("4_8drwc")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/bold_font = ExtResource("5_vgeml")
theme_override_font_sizes/bold_font_size = 50
bbcode_enabled = true
text = "[center][b]Fin[/b][/center]"

[node name="Fin2" type="RichTextLabel" parent="."]
offset_left = 356.0
offset_top = 76.0
offset_right = 798.0
offset_bottom = 385.0
mouse_filter = 2
theme = ExtResource("4_8drwc")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/bold_font = ExtResource("5_vgeml")
theme_override_font_sizes/bold_font_size = 30
bbcode_enabled = true
text = "[center][b]I ran out of time for a happy ending or the ending graphics. 

Sorry.

...There's also no restart button. [/b][/center]"
